--- a/SpringRabbitMQ/src/main/resources/application.properties
+++ b/SpringRabbitMQ/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.password=guest
 spring.rabbitmq.username=guest
+
+server.port=8080
